# openclaw

shinso-output-v1/rust/: Cargo.toml
shinso-output-v1/rust/src/: lib.rs
skills/openai-image-gen/scripts/: gen.py
