[package]
name = "shinso-optimized"
version = "0.1.0"
edition = "2021"

[lib]
name = "shinso_optimized"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
